--- a/app/modules/flags.html
+++ b/app/modules/flags.html
@@ -6,7 +6,7 @@
                     <div class="col-sm-12">
                         <h2 class="close-top">Please help us get to Scout Camp!</h2>
                         <h4>
-                            <button class="btn btn-sm btn-primary" ng-click="vm.showBoundaries()">Flag Boundaries</button>
+                            <button class="btn btn-primary" ng-click="vm.showBoundaries()">Flag Boundaries</button>
                             Please make sure you live in the boundaries that we cover.
                         </h4>
                         <h3>All of the money collected for this flag subscription goes toward the cost of our Boy Scout summer camp.</h3>
@@ -37,13 +37,13 @@
                             <div class="form-group">
                                 <label class="checkbox-inline">
                                     <input ng-model="vm.data.values.subscribe" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like a flag subscription for Memorial Day {{vm.data.year}} through Presidents' Day {{vm.data.year + 1}}</span>
-                                    <span ng-show="!!vm.data.values.subscribe"><small><em>Thank you!!</em></small></span>
+                                    <span ng-show="!!vm.data.values.subscribe"><br /><small><em>Thank you!!</em></small></span>
                                 </label>
                             </div>
                             <div class="form-group">
                                 <label class="checkbox-inline">
                                     <input ng-model="vm.data.values.donate" type="checkbox" ng-blur="vm.autosave()"><span class="h4">I would like to give a<span ng-show="vm.data.values.subscribe">n additional</span> donation.</span>
-                                    <span ng-show="!!vm.data.values.donate"><small><em>Thank you!!</em></small></span>
+                                    <span ng-show="!!vm.data.values.donate"><br /><small><em>Thank you!!</em></small></span>
                                 </label>
                                 <div class="input-group narrow">
                                     <span class="input-group-addon">$</span>
@@ -102,8 +102,12 @@
                             <div class="text-center"><i class="fa fa-3x fa-cc-paypal"></i> <i class="fa fa-3x fa-cc-amex"></i> <i class="fa fa-3x fa-cc-discover"></i> <i class="fa fa-3x fa-cc-mastercard"></i> <i class="fa fa-3x fa-cc-visa"></i></div>
                         </form>
                         <div class="row">
-                            <div class="col-xs-12">
-                                <h5>Or pay by check/cash. Please make checks out to BSA Troop 581. Checks can be mailed to 632 E Desert Ln, Gilbert, AZ 85234</h5>
+                            <div class="col-xs-12 text-center">
+                                <h5>
+                                    Or pay by check/cash. Please make checks out to <strong>BSA&nbsp;Troop&nbsp;581</strong>.
+                                    <br />
+                                    Checks can be mailed to 632&nbsp;E&nbsp;Desert&nbsp;Ln,&nbsp;Gilbert,&nbsp;AZ&nbsp;85234
+                                </h5>
                             </div>
                         </div>
                     </div>
@@ -132,7 +136,7 @@
                     For more information about the flag service,
                     to speak with someone about your flag service,
                     or for more information on joining our troop,
-                    please <a href="mailto:troop581az@gmail.com">send us an email</a>.
+                    please <a href="mailto:email@troop581.us">send us an email</a>.
                 </h5>
             </div>
         </div>
