--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -20,7 +20,7 @@
                 </div>
                 <hr />
                 <div class="row">
-                    <div class="col-xs-7">
+                    <div class="col-xs-6">
                         <form>
                             <div class="form-group field-label">
                                 <label>Name</label>
@@ -28,7 +28,7 @@
                             </div>
                             <div class="form-group field-label">
                                 <label>Street Address</label>
-                                <div class="input-group">
+                                <div class="input-group input-group-sm">
                                     <input type="text" class="form-control input" ng-model="vm.data.values.address" ng-blur="vm.autosave()">
                                     <span class="input-group-addon">Gilbert, AZ</span>
                                 </div>
@@ -52,7 +52,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-xs-5">
+                    <div class="col-xs-6">
                         <div class="well well-sm text-center">
                             <div class="row">
                                 <div class="col-xs-12 h5">
@@ -63,10 +63,7 @@
                                     <h5>Checks can be mailed to <br />632 E Desert Ln, Gilbert, AZ 85234</h5>
                                 </div>
                                 <div class="col-xs-12 h5">
-                                    or
-                                </div>
-                                <div class="col-xs-12 h5">
-                                    Sign up and Pay Online at
+                                    or Sign up and Pay Online at
                                 </div>
                                 <div class="col-xs-12 h4">
                                     <strong>www.Troop581.us</strong>
