--- a/app/modules/requirements.html
+++ b/app/modules/requirements.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="requirements as vm">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div ng-if="vm.data.processingRequirements" class="text-center text-primary">
