--- a/app/modules/flyer.html
+++ b/app/modules/flyer.html
@@ -85,7 +85,8 @@
                 <div class="well well-sm holidays">
                     <div class="holiday" ng-repeat="holiday in vm.data.holidays">
                         <h4 class="holiday-text">{{holiday.text}}</h4>
-                        <h4 class="holiday-date"><small>{{holiday.dateNoYear}}</small></h4>
+                        <h4 class="holiday-date" ng-hide="vm.hideSpecificDates"><small>{{holiday.date | momentToString:'dddd, MMMM D, YYYY'}}</small></h4>
+                        <h4 class="holiday-date" ng-hide="!vm.hideSpecificDates"><small>{{holiday.dateNoYear}}</small></h4>
                     </div>
                 </div>
                 <h5>
