--- a/app/modules/requirements.html
+++ b/app/modules/requirements.html
@@ -10,6 +10,14 @@
                 <br />
             </div>
         </div>
+        <div class="row text-danger" ng-if="vm.data.failures.ranks.length || vm.data.failures.meritBadges.length">
+            <div class="col-xs-12">
+                <div>Failures</div>
+                <div ng-repeat="failure in vm.data.failures.ranks track by $index"></div>
+                <div ng-repeat="failure in vm.data.failures.meritBadges track by $index"></div>
+            </div>
+            <br />
+        </div>
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="text-primary">Ranks</h3>
