--- a/app/modules/requirements.html
+++ b/app/modules/requirements.html
@@ -10,8 +10,9 @@
                 <br />
             </div>
         </div>
-        <div class="row top-buffer alert alert-danger" ng-if="vm.data.failures.ranks.length || vm.data.failures.meritBadges.length">
+        <div class="row top-buffer alert alert-danger alert-dismissable" ng-if="vm.data.failures.ranks.length || vm.data.failures.meritBadges.length">
             <div class="col-xs-12">
+                <button type="button" class="close" ng-click="vm.data.failures = {rank:[],meritBadges:[]}"><span><i class="fa fa-times"></i></span></button>
                 <h4><strong>Failures</strong></h4>
                 <div ng-repeat="badge in vm.data.failures.ranks | objToArray | orderBy:'order' track by badge.name">{{badge.name}} Rank</div>
                 <div ng-repeat="badge in vm.data.failures.meritBadges | objToArray | orderBy:'name' track by badge.name">{{badge.name}}</div>
