--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:700,300,400|Patua+One' rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="content/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="content/css/ng-quick-date-plus-default-theme_smw.css" rel="stylesheet" />
     <link href="content/css/toastr.min.css" rel="stylesheet" />
     <link href="app/styles.min.css" rel="stylesheet" />
 </head>
@@ -34,10 +33,6 @@
     <script>window._ || document.write('<script src="scripts/lodash.min.js"><\/script>')</script>
     <script src="scripts/toastr.min.js"></script>
     <script src="scripts/ui-bootstrap-tpls-0.13.3.min.js"></script>
-    <!--<script src="scripts/ng-quick-date.min.js"></script>
-    <script src="scripts/xlsx.core.min.js"></script>
-    <script src="scripts/FileSaver.min.js"></script>
-    <script src="scripts/angular-file-upload.min.js"></script>-->
 
     <script src="app/scripts.js"></script>
 </body>
