--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:700,300,400|Patua+One' rel='stylesheet' type='text/css'>
     <link href="content/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="content/css/font-awesome.min.css" rel="stylesheet">
     <link href="content/css/toastr.min.css" rel="stylesheet" />
     <link href="app/styles.min.css" rel="stylesheet" />
 </head>
@@ -26,7 +26,7 @@
     <script>try { angular.module('ngRoute'); } catch (e) { document.write('<script src="scripts/angular-route.min.js"><\/script>'); }</script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js"></script>
     <script>try { angular.module('ngSanitize'); } catch (e) { document.write('<script src="scripts/angular-sanitize.min.js"><\/script>'); }</script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
     <script>window.moment || document.write('<script src="scripts/moment.min.js"><\/script>')</script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.min.js"></script>
